dev includes `get_edgar_urls.py ` to encapsulate url structuring / source tables

--- a/notebooks/SEC_Example.ipynb
+++ b/notebooks/SEC_Example.ipynb
@@ -7,7 +7,8 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "name": "python"
@@ -16,9 +17,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "id": "leXZqkaUspeE"
+    "id": "leXZqkaUspeE",
+    "ExecuteTime": {
+     "end_time": "2024-04-06T21:48:10.286623400Z",
+     "start_time": "2024-04-06T21:48:09.978454100Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -41,19 +46,23 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "z3ZgaLa9wbdK",
-    "outputId": "a60ddaec-88e4-44d0-e67c-684133341467"
+    "outputId": "a60ddaec-88e4-44d0-e67c-684133341467",
+    "ExecuteTime": {
+     "end_time": "2024-04-06T21:48:10.908536300Z",
+     "start_time": "2024-04-06T21:48:10.285614200Z"
+    }
    },
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "0 {'cik_str': 789019, 'ticker': 'MSFT', 'title': 'MICROSOFT CORP'}\n",
       "1 {'cik_str': 320193, 'ticker': 'AAPL', 'title': 'Apple Inc.'}\n",
       "2 {'cik_str': 1045810, 'ticker': 'NVDA', 'title': 'NVIDIA CORP'}\n",
-      "3 {'cik_str': 1018724, 'ticker': 'AMZN', 'title': 'AMAZON COM INC'}\n",
-      "4 {'cik_str': 1652044, 'ticker': 'GOOGL', 'title': 'Alphabet Inc.'}\n"
+      "3 {'cik_str': 1652044, 'ticker': 'GOOGL', 'title': 'Alphabet Inc.'}\n",
+      "4 {'cik_str': 1018724, 'ticker': 'AMZN', 'title': 'AMAZON COM INC'}\n"
      ]
     }
    ]
@@ -70,19 +79,21 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "U-AFJPxvuO7W",
-    "outputId": "f7745148-447a-4ab7-87d7-d7fd4510c748"
+    "outputId": "f7745148-447a-4ab7-87d7-d7fd4510c748",
+    "ExecuteTime": {
+     "end_time": "2024-04-06T21:48:11.701512500Z",
+     "start_time": "2024-04-06T21:48:11.680858700Z"
+    }
    },
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "101778"
-      ]
+      "text/plain": "101778"
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ]
   },
@@ -97,19 +108,21 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "lCFvCNFWxCM-",
-    "outputId": "9622a2c6-09cb-410d-c5cd-29b7ce96fea9"
+    "outputId": "9622a2c6-09cb-410d-c5cd-29b7ce96fea9",
+    "ExecuteTime": {
+     "end_time": "2024-04-06T21:48:18.832767500Z",
+     "start_time": "2024-04-06T21:48:17.961997700Z"
+    }
    },
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "dict_keys(['cik', 'entityType', 'sic', 'sicDescription', 'insiderTransactionForOwnerExists', 'insiderTransactionForIssuerExists', 'name', 'tickers', 'exchanges', 'ein', 'description', 'website', 'investorWebsite', 'category', 'fiscalYearEnd', 'stateOfIncorporation', 'stateOfIncorporationDescription', 'addresses', 'phone', 'flags', 'formerNames', 'filings'])"
-      ]
+      "text/plain": "dict_keys(['cik', 'entityType', 'sic', 'sicDescription', 'insiderTransactionForOwnerExists', 'insiderTransactionForIssuerExists', 'name', 'tickers', 'exchanges', 'ein', 'description', 'website', 'investorWebsite', 'category', 'fiscalYearEnd', 'stateOfIncorporation', 'stateOfIncorporationDescription', 'addresses', 'phone', 'flags', 'formerNames', 'filings'])"
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ]
   },
